--- a/templates/opinion.html
+++ b/templates/opinion.html
@@ -13,7 +13,9 @@
         </p>
         <p>
           Ссылка для друзей:
-          <a href=""></a>
+          <a href="{{ url_for('opinion_view', id=opinion.id) }}"
+            >{{ url_for('opinion_view', id=opinion.id, _external=True) }}</a
+          >
         </p>
       </div>
       <div class="col-12 col-lg-5">
